# CSC400

./: .gitignore  .travis.yml  CMakeLists.txt  FindGfxLibs.cmake  Lab1 (1).drawio  README.md  README.txt
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Camera.sln  Camera.vcxproj  Camera.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build2/Camera.dir/Debug/: Camera.exe.recipe
build2/Camera.dir/Debug/Camera.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Camera.lastbuildstate  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/miniaudio/freetype/config/: ftheader.h
resources/: Aatrox.glb  TrashContainer.dae  baguette.fbx  cheese.fbx  dance.glb  depth_frag.glsl  depth_fragDebug.glsl  depth_vert.glsl  depth_vertDebug.glsl  edit_frag.glsl  edit_vert.glsl  escargot.fbx  frenchFries.fbx  glider.glb  grapes.fbx  hmap.psd  hmap.xcf  hmap_frag.glsl  hmap_vert.glsl  mod_frag.glsl  mod_vert.glsl  particle_frag.glsl  particle_vert.glsl  pass_texfrag.glsl  pass_vert.glsl  penguin.dae  penguinGF.fbx  picnicBasket.fbx  picnicBlanket.fbx  platform_frag.glsl  save.noot  simple_frag.glsl  simple_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  terrain_vert.glsl  testOut.txt  tex_frag.glsl  tex_frag0.glsl  tex_vert.glsl  (+5 more)
resources/cracks/: vc_dn.tga  vc_up.tga
resources/skybox/: nebula.glb
src/: Animation.h  Animator.h  Bezier.cpp  Bezier.h  Bone.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Components.h  Entity.cpp  Entity.h  EventManager.cpp  EventManager.h  GLTextureWriter.cpp  GLTextureWriter.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  ImportExport.cpp  ImportExport.h  InputHandler.cpp  InputHandler.h  LevelEditor.cpp  LevelEditor.h  Manchot.cpp  Manchot.h  ManchotController.h  MatrixStack.cpp  Mesh.h  Model.h  Particle.cpp  Particle.h  PhysicalObject.cpp  PhysicalObject.h  Program.cpp  Program.h  ShaderManager.cpp  ShaderManager.h  (+15 more)
webpage/: .index.html.swp  index.html  scripts.js  styles.css
